Update redirection links
No longer redirects to patreon, now redirects to this repository.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;url=https://patreon.com/c/IsaacAragonDEV">
+    <meta http-equiv="refresh" content="0;url=https://github.com/IsaacAragon/focusplanet">
     <script>
-        window.location.href = "https://patreon.com/c/IsaacAragonDEV";
+        window.location.href = "https://github.com/IsaacAragon/focusplanet";
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://patreon.com/c/IsaacAragonDEV">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://github.com/IsaacAragon/focusplanet">click here</a>.</p>
 </body>
 </html>
